# evo-os

./: .gitignore  .gitmodules  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  i686-nexus.json  linker.ld
.agent/: plugin.json
.agent/workflows/: build.md  submodule-sync.md  test.md  update-docs.md
boot/: stage1.asm  stage2.asm
docs/: BOOT_CHAIN.md  ROADMAP.md  evo-os-guide.tex
src/: desktop.rs  lib.rs  vga.rs  window.rs
src/colors/: mod.rs  palette.rs  semantic.rs  theme.rs
src/shell/: commands.rs  mod.rs  parser.rs  terminal.rs
