[package]
name = "evo_os"
version = "0.1.0"
edition = "2021"
authors = ["EvoOS Team"]
description = "EvoOS - A new operating system written in Rust from scratch"

[lib]
crate-type = ["staticlib"]
path = "src/lib.rs"

# Bare metal - no standard library
[profile.dev]
panic = "abort"
opt-level = 1

[profile.release]
panic = "abort"
opt-level = 2
lto = true
